# serf-reproduce

./: .gitignore  bucket_benchmark_results.txt  bucket_benchmark_results_1M.txt  bucket_benchmark_results_hnsw_1M.txt  debug_sef_2d.cc  global_benchmark_results_1M.txt  plot_global_recall_qps.py  plot_recall_qps.py  run_bucket_benchmark.sh  run_bucket_benchmark_hnsw.sh  run_global_benchmark.sh  run_sift1m_bucket_test.sh
benchmark/: CMakeLists.txt  benchmark_bucket_hnsw.cc  benchmark_bucket_serf.cc  benchmark_hnsw_arbitrary.cc  benchmark_serf_2d_optimize.cc  benchmark_serf_global.cc  benchmark_serf_simple.cc  hnsw_save_load.cc  serf_arbitrary.cc  serf_save_load.cc
include/common/: data_wrapper.h  utils.h
script/: plot_results.py  run_hnsw_range_test.sh  run_hnsw_range_test_parallel.py  run_insert_test.sh  run_insert_test_hnsw.sh  run_serf_range_test.sh  run_serf_range_test_parallel.py  run_serf_resume.py  run_wit_param_test.sh  run_wit_range_test.sh  test_deep_small.py  test_small_parallel.py  wit_image.py
script_milvus/: docker-compose.milvus.yml  milvus_insert_test.py  milvus_insert_test_all.sh  milvus_search_test.py  milvus_search_test_all.sh  run_milvus_range_test_parallel.py  start_milvus.sh
scripts/: build_and_test.py  load_and_test.py  plot_pareto.py
src/: index_base.h  segment_graph_2d.h
src/baselines/: knn_first_hnsw.h
src/common/: data_wrapper.cc  utils.cc
