set(CMAKE_CXX_STANDARD 17)

add_executable(generate_groundtruth generate_groundtruth.cc)
target_link_libraries(generate_groundtruth UTIL)
target_compile_options(generate_groundtruth PRIVATE -Wall ${OpenMP_CXX_FLAGS})
target_link_libraries(generate_groundtruth ${OpenMP_CXX_FLAGS})
target_link_libraries(generate_groundtruth OpenMP::OpenMP_CXX)


add_executable(serf_halfbound serf_halfbound.cc)
target_link_libraries(serf_halfbound UTIL)
target_compile_options(serf_halfbound PRIVATE -Wall ${OpenMP_CXX_FLAGS})
target_link_libraries(serf_halfbound ${OpenMP_CXX_FLAGS})
target_link_libraries(serf_halfbound OpenMP::OpenMP_CXX)

add_executable(serf_arbitrary serf_arbitrary.cc)
target_link_libraries(serf_arbitrary UTIL)
target_compile_options(serf_arbitrary PRIVATE -Wall ${OpenMP_CXX_FLAGS})
target_link_libraries(serf_arbitrary ${OpenMP_CXX_FLAGS})
target_link_libraries(serf_arbitrary OpenMP::OpenMP_CXX)

add_executable(benchmark_serf_simple benchmark_serf_simple.cc)
target_link_libraries(benchmark_serf_simple UTIL)
target_compile_options(benchmark_serf_simple PRIVATE -Wall ${OpenMP_CXX_FLAGS})
target_link_libraries(benchmark_serf_simple ${OpenMP_CXX_FLAGS})
target_link_libraries(benchmark_serf_simple OpenMP::OpenMP_CXX)

add_executable(benchmark_serf_2d_optimize benchmark_serf_2d_optimize.cc)
target_link_libraries(benchmark_serf_2d_optimize UTIL)
target_compile_options(benchmark_serf_2d_optimize PRIVATE -Wall ${OpenMP_CXX_FLAGS})
target_link_libraries(benchmark_serf_2d_optimize ${OpenMP_CXX_FLAGS})
target_link_libraries(benchmark_serf_2d_optimize OpenMP::OpenMP_CXX)

add_executable(benchmark_hnsw_arbitrary benchmark_hnsw_arbitrary.cc)
target_link_libraries(benchmark_hnsw_arbitrary UTIL)
target_compile_options(benchmark_hnsw_arbitrary PRIVATE -Wall ${OpenMP_CXX_FLAGS})
target_link_libraries(benchmark_hnsw_arbitrary ${OpenMP_CXX_FLAGS})
target_link_libraries(benchmark_hnsw_arbitrary OpenMP::OpenMP_CXX)

add_executable(benchmark_serf_global benchmark_serf_global.cc)
target_link_libraries(benchmark_serf_global UTIL)
target_compile_options(benchmark_serf_global PRIVATE -Wall ${OpenMP_CXX_FLAGS})
target_link_libraries(benchmark_serf_global ${OpenMP_CXX_FLAGS})
target_link_libraries(benchmark_serf_global OpenMP::OpenMP_CXX)

add_executable(serf_save_load serf_save_load.cc)
target_link_libraries(serf_save_load UTIL)
target_compile_options(serf_save_load PRIVATE -Wall ${OpenMP_CXX_FLAGS})
target_link_libraries(serf_save_load ${OpenMP_CXX_FLAGS})
target_link_libraries(serf_save_load OpenMP::OpenMP_CXX)

add_executable(hnsw_save_load hnsw_save_load.cc)
target_link_libraries(hnsw_save_load UTIL)
target_compile_options(hnsw_save_load PRIVATE -Wall ${OpenMP_CXX_FLAGS})
target_link_libraries(hnsw_save_load ${OpenMP_CXX_FLAGS})
target_link_libraries(hnsw_save_load OpenMP::OpenMP_CXX)